[gd_scene load_steps=7 format=2]

[ext_resource path="res://audio/sfx/items/koopa/smw_kick.ogg" type="AudioStream" id=1]
[ext_resource path="res://actors/items/koopa/koopa.gd" type="Script" id=2]
[ext_resource path="res://actors/items/koopa/standing.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "standing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 16.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 16.5 )

[node name="Koopa" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "standing"
playing = true

[node name="KinematicShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 0, 21 )

[node name="KoopaCollision" type="Area2D" parent="."]
position = Vector2( 0, 0.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KoopaCollision"]
shape = SubResource( 3 )
one_way_collision = true

[node name="Kick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="body_entered" from="KoopaCollision" to="." method="_on_KoopaCollision_body_entered"]
[connection signal="finished" from="Kick" to="." method="_on_Kick_finished"]
